# src/Mirakurun/api/channels/{type}/{channel}/services/{id}/stream.ts
@@ -77,25 +77,24 @@ export const get: Operation = (req, res) => {
         return;
     }
 
+    const streamID = _.channel.getStreamID(service.networkId, service.streamId);
+    if (req.query.format === "tlv" && streamID?.streamFormat === "ts") {
+        api.responseError(res, 406, "Requested Stream Format Unavailable");
+        return;
+    }
     const userId = (req.ip || "unix") + ":" + (req.socket.remotePort || Date.now());
-
     const contentType = req.query.format === "tlv" ? "application/octet-stream" : "video/MP2T";
     const outputFormat = (req.query.format === "tlv" ? "tlv" : undefined) as OutputFormat | undefined;
-
-    // HEAD request support
     if (req.method === "HEAD") {
         res.setHeader("Content-Type", contentType);
         res.setHeader("X-Mirakurun-Tuner-User-ID", userId);
         res.status(200).end();
         return;
     }
-
     let requestAborted = false;
     req.once("close", () => requestAborted = true);
-
     (<any> res.socket)._writableState.highWaterMark = Math.max(res.writableHighWaterMark, 1024 * 1024 * 16);
     res.socket.setNoDelay(true);
-
     service.getStream({
         id: userId,
         priority: parseInt(req.get("X-Mirakurun-Priority"), 10) || 0,
@@ -103,25 +102,21 @@ export const get: Operation = (req, res) => {
         url: req.url,
         disableDecoder: (<number> <any> req.query.decode === 0),
         outputFormat
-    }, res)
-        .then(tsFilter => {
-            if (requestAborted === true || req.aborted === true) {
-                return tsFilter.close();
-            }
-
-            req.once("close", () => tsFilter.close());
-
-            res.setHeader("Content-Type", contentType);
-            res.setHeader("X-Mirakurun-Tuner-User-ID", userId);
-            res.status(200);
-        })
-        .catch((err) => api.responseStreamErrorHandler(res, err));
+    }, res).then(tsFilter => {
+        if (requestAborted === true || req.aborted === true) {
+            return tsFilter.close();
+        }
+        req.once("close", () => tsFilter.close());
+        res.setHeader("Content-Type", contentType);
+        res.setHeader("X-Mirakurun-Tuner-User-ID", userId);
+        res.status(200);
+    }).catch(err => api.responseStreamErrorHandler(res, err));
 };
 
 get.apiDoc = {
     tags: ["channels", "services", "stream"],
     operationId: "getServiceStreamByChannel",
-    produces: ["video/MP2T"],
+    produces: ["video/MP2T", "application/octet-stream"],
     responses: {
         200: {
             description: "OK",
@@ -133,6 +128,9 @@ get.apiDoc = {
         },
         404: {
             description: "Not Found"
+        },
+        406: {
+            description: "Requested Stream Format Unavailable"
         },
         503: {
             description: "Tuner Resource Unavailable"
